add support for custom radio btn and chekbox; fixing cart.js and product.js in catalog core. add more styles for produ_prodc component defatul ; ; ceckout step logins checked on new inptus

--- a/catalog/view/theme/d_visualize/stylesheet/vz-component/product_product/default.css
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-component/product_product/default.css
@@ -1,8 +1,8 @@
-.vz-product_product {
-  &__images {
-   }
+.vz-product-product {
   &__images_additionals {
     display: flex;
   }
-
+   .vz-button--cart {
+        margin-bottom: 20px;
+   }
 }
