--- a/catalog/view/theme/d_visualize/template/component/checkout_cart/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/checkout_cart/default.twig
@@ -2,7 +2,7 @@
     <div class="vz-checkout-cart__heading heading-h1">{{ heading_title }}
         {% if weight %}
             &nbsp;({{ weight }})
-        {% endif %} </h1>
+        {% endif %} </div>
     <form action="{{ action }}" method="post" enctype="multipart/form-data">
         <div class="table-responsive">
             <table class="table table-bordered">
