--- a/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
@@ -91,7 +91,7 @@
             id:'input-country',
             name:'country_id',
             value:country,
-            select_values:countries,
+            values:countries,
             select_values_val:'country_id',
             select_values_check: country_id,
             select_values_name: 'name',
@@ -110,7 +110,7 @@
             id:'input-zone',
             name:'zone_id',
             value:zone,
-            select_values:null,
+            values:null,
             select_values_val:'zone_id',
             select_values_check: zone_id,
             select_values_name: 'name',
