--- a/catalog/view/theme/d_visualize/template/component/d_custom_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_custom_field/default.twig
@@ -14,7 +14,7 @@
                 name:'custom_field[' ~location ~']'~ '['~custom_field_id ~ ']',
                 classes:'field',
                 value:country,
-                select_values:custom_field_value,
+                values:custom_field_value,
                 select_values_check_val:'custom_field_value_id',
                 select_values_name:'name',
                 custom_selection: ' {% if register_custom_field %}
