--- a/catalog/view/theme/d_visualize/stylesheet/vz-component/input/default.css
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-component/input/default.css
@@ -6,8 +6,13 @@
         margin: 0 5px;
     }
     /*radio item*/
-    &--radio{
-        display: flex;
+
+    &--radio, &--checkbox {
+        height: auto !important;
+        display: inline-flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
     }
     /*radio list */
     &-radio-wrap{
