--- a/catalog/view/theme/d_visualize/template/account/register.twig
+++ b/catalog/view/theme/d_visualize/template/account/register.twig
@@ -31,6 +31,7 @@
              
             {% block affiliate %}
             {% endblock %}
+            {% if not customer_logged %}
             {% block password %}
             <fieldset class="password">
                 <h3>{{ text_your_password }}</h3>
@@ -62,7 +63,7 @@
                 } %}
             </fieldset>
             {% endblock %}
-            
+            {% endif %}
             {% block newslatter %}
             <fieldset class="newslatter">
                 <h3>{{ text_newsletter }}</h3>
