--- a/catalog/view/theme/d_visualize/template/checkout/guest_shipping.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/guest_shipping.twig
@@ -1,31 +1,1 @@
-<form class="form-horizontal">
-    {#this var need to prevent error displaying before render#}
-    {% set error_then = true %}
-    {% set form = 'inline' %}
-    {% include component.d_name_field.template with component.d_name_field %}
-    {% include component.d_address_field.template with component.d_address_field %}
-    {% for custom_field in custom_fields %}
-        {% if custom_field.location == 'address' %}
-            {% include component.d_custom_field.template with component.d_custom_field|merge({custom_field:custom_field}) %}
-        {% endif %}
-    {% endfor %}
-    {% include component.d_button_continue.template with component.d_button_continue|merge({
-        button: true,
-        id:"button-guest-shipping",
-        button_continue: button_continue,
-    }) %}
-    {% set error_then = false %}
-    {% set form = '' %}
-
-</form>
-
-<script type="text/javascript"><!--
-$(function(){
-    d_address_field.init({
-        zone_id: '{{zone_id}}',
-        text_none: '{{text_none}}',
-        text_select: '{{text_select}}'
-    });
-    d_custom_field.init();
-})
-//--></script>
+gust shi
