--- a/catalog/view/theme/d_visualize/template/checkout/payment_address.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/payment_address.twig
@@ -1,12 +1,13 @@
 <form class="form-horizontal">
     {% if addresses %}
-        {% include component.input.template with component.input|merge({
+
+        {% include component.input.template with {input:{
             type:'radio',
             name:'payment_address',
             value:'existing',
             checked:true,
             text_input:text_address_existing,
-        }) %}
+        }} %}
         <div id="payment-existing">
             <select name="address_id" class="form-control">
                 {% for address in addresses %}
@@ -17,12 +18,12 @@
                 {% endfor %}
             </select>
         </div>
-        {% include component.input.template with component.input|merge({
+        {% include component.input.template with {input:{
             type:'radio',
             name:'payment_address',
             value:'new',
             text_input:text_address_new,
-        }) %}
+        }} %}
     {% endif %}
     <br/>
     {#this var need to prevent error displaying before render#}
@@ -44,7 +45,7 @@
         button: true,
         id:"button-payment-address",
         button_continue: button_continue,
-        text_agree:false
+        text_agree: false
     }) %}
 </form>
 
