--- a/catalog/view/theme/d_visualize/template/component/form_group/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/form_group/default.twig
@@ -22,21 +22,27 @@
     {% set form_group_label_class = form_group_label_class ~ ' col-sm-2' %}
     {% set form_group_div_class = form_group_div_class ~ ' col-sm-10' %}
 {% endif %}
-<div {% if form_group.id %}id="{{ form_group.id }}"{% endif %} class="{{ form_group_class }}" {% if form_group.atributest %}{{ form_group.atributest|raw }}{% endif %}>
-        <label class="{{ form_group_label_class }} "
-                {% if form_group.id %} for="{{ input.id }}" {% endif %}>
+<div {% if form_group.id %} id="{{ form_group.id }}"{% endif %}
+     class="{{ form_group_class }}" {% if form_group.atributest %}{{ form_group.atributest|raw }}{% endif %}>
+    <label class="{{ form_group_label_class }}"
+            {% if form_group.id %} for="{{ input.id }}" {% endif %}>
             <span {% if form_group.hint %} data-toggle="{{ input.hint }}" {% endif %}>
                 {{ form_group.label_text }}</span></label>
-        <div class="{{ form_group_div_class }}">
-            {% if form_group.input_group is defined %}
-                {% include component.input_group.template with form_group %}
-            {% elseif form_group.input is defined %}
+    <div class="{{ form_group_div_class }}">
+        {% if form_group.input_group is defined %}
+            {% include component.input_group.template with form_group %}
+        {% endif %}
+
+        {% if form_group.input is defined %}
+            {% block input %}
                 {% include component.input.template with form_group %}
-            {% else %}
-                no input please check!
-            {% endif %}
-            {% if form_group.error %}
-                <div class="text-danger">{{ form_group.error }}</div>
-            {% endif %}
-        </div>
+            {% endblock %}
+        {% endif %}
+        {% if form_group.button is defined %}
+            {% include component.button.template with form_group %}
+        {% endif %}
+        {% if form_group.error %}
+            <div class="text-danger">{{ form_group.error }}</div>
+        {% endif %}
+    </div>
 </div>
