--- a/catalog/view/theme/d_visualize/template/component/product/options/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product/options/default.twig
@@ -1,165 +1,215 @@
 {% if options %}
-    <div class="options-wrap">
-    {% for option in options %}
-        {% if option.type == 'select' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label"
-                       for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                <select name="option[{{ option.product_option_id }}]"
-                        id="input-option{{ option.product_option_id }}" class="form-control">
-                    <option value="">{{ text_select }}</option>
-                    {% for option_value in option.product_option_value %}
-                        <option value="{{ option_value.product_option_value_id }}">{{ option_value.name }}
-                            {% if option_value.price %}
-                                ({{ option_value.price_prefix }} {{ option_value.price }} )
-                            {% endif %} </option>
-                    {% endfor %}
-                </select>
-            </div>
-        {% endif %}
-        {% if option.type == 'radio' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label">{{ option.name }}</label>
-                <div id="input-option{{ option.product_option_id }}"
-                     class="options">
-                    {% for option_value in option.product_option_value %}
-                        <label class="product-option-wrap">
-                            <input type="radio" name="option[{{ option.product_option_id }}]"
-                                   value="{{ option_value.product_option_value_id }}"
-                                   class="field field--radio"/>
-                            {% if option_value.image %}
-                                <div class="product-option"></div>
-                                <img src="{{ option_value.image }}"
-                                     alt="{{ option_value.name }}
-                                {% if option_value.price %}
-                                    {{ option_value.price_prefix }} {{ option_value.price }}
-                                {% endif %}"
-                                     class="img-thumbnail"/>
-                            {% else %}
-                                {{ option_value.name }}
-                                {% if option_value.price %}
-                                    ({{ option_value.price_prefix }}{{ option_value.price }})
+    <div class="vz-product-options">
+        {% for option in options %}
+            {% if option.type == 'select' %}
+                {% embed component.form_group.template with {
+                    form_group:{
+                        label_text:option.name,
+                        required:option.required,
+                        input:true,
+                    },
+                    option:option
+                } %}
+                    {% block input %}
+                        {% embed component.input.template with {input:{
+                            type:'select',
+                            id:'input-option'~option.product_option_id,
+                            name:'option[' ~ option.product_option_id ~ ']',
+                            placeholder:text_select,
+                            values:option.product_option_value
+                        },
+                        } %}
+                            {% block select_option %}
+                                <option value="{{ option.product_option_value_id }}">{{ option.name }}
+                                    {% if option.price %}
+                                        ({{ option.price_prefix }}{{ option.price }})
+                                    {% endif %}
+                                </option>
+                            {% endblock %}
+                        {% endembed %}
+                    {% endblock %}
+                {% endembed %}
+            {% endif %}
+            {% if option.type == 'radio' %}
+                {% embed component.form_group.template with {
+                    form_group:{
+                        type:'radio',
+                        label_text:option.name,
+                        required:option.required,
+                        input:true,
+                    },
+                    option:option
+                } %}
+                    {% block input %}
+                        {% embed component.input.template with {input:{
+                            type:'radio',
+                            id:'input-option'~option.product_option_id,
+                            name:'option[' ~ option.product_option_id ~ ']',
+                            values:option.product_option_value
+                        },
+                        } %}
+                            {% block radio_option %}
+                                <input type="radio" 
+                                name="{{input.name}}"
+                                value="{{option.product_option_value_id}}"
+                                class="{{input_classes}}"/>
+                                {% if option.image %}
+                                 <img src="{{ option.image }}"
+                                        alt="{{ option.name }} {% if option.price %} {{ option.price_prefix }} {{ option.price }} {% endif %}" class="vz-input__option-image"/> {% endif %}
+                                {{ option.name }}
+                                {% if option.price %}
+                                    ({{ option.price_prefix }}{{ option.price }})
                                 {% endif %}
+                            {% endblock %}
+                        {% endembed %}
+                    {% endblock %}
+                {% endembed %}
+            {% endif %}
+            {% if option.type == 'checkbox' %}
+            {% embed component.form_group.template with {
+                form_group:{
+                    type:'checkbox',
+                    label_text:option.name,
+                    required:option.required,
+                    input:true,
+                },
+                option:option
+            } %}
+                {% block input %}
+                    {% embed component.input.template with {input:{
+                        type:'checkbox',
+                        id:'input-option'~option.product_option_id,
+                        name:'option[' ~ option.product_option_id ~ ']',
+                        values:option.product_option_value
+                    },
+                    } %}
+                        {% block checkbox_option %}
+                            <input type="checkbox" 
+                            name="{{input.name}}"
+                            value="{{option.product_option_value_id}}"
+                            class="{{input_classes}}"/>
+                            {% if option.image %}
+                             <img src="{{ option.image }}"
+                                    alt="{{ option.name }} {% if option.price %} {{ option.price_prefix }} {{ option.price }} {% endif %}" class="vz-input__option-image"/> {% endif %}
+                            {{ option.name }}
+                            {% if option.price %}
+                                ({{ option.price_prefix }}{{ option.price }})
                             {% endif %}
-
-                        </label>
-                    {% endfor %}
-                </div>
-            </div>
-        {% endif %}
-        {% if option.type == 'checkbox' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label">{{ option.name }}</label>
-                <div id="input-option{{ option.product_option_id }}" class="options">
-                    {% for option_value in option.product_option_value %}
-                        <label class="product-option-wrap">
-
-                            {% include component.input.template with component.input|merge({
-                                type:'checkbox',
-                                name:'option[' ~ option.product_option_id ~ '][]',
-                                value:option_value.product_option_value_id ,
-                            }) %}
-
-                            {% if option_value.image %}
-                                <img src="{{ option_value.image }}"
-                                     alt="{{ option_value.name }}
-                                    {% if option_value.price %} {{ option_value.price_prefix }} {{ option_value.price }}
-                                    {% endif %}"
-                                     class="img-thumbnail"/>
-                            {% else %}
-                                {{ option_value.name }}
-                                {% if option_value.price %}
-                                    ({{ option_value.price_prefix }}{{ option_value.price }})
-                                {% endif %}
-                            {% endif %}
-                        </label>
-                    {% endfor %} </div>
-            </div>
-        {% endif %}
-        {% if option.type == 'text' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label"
-                       for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                {% include component.input.template with component.input|merge({
-                    type:'text',
-                    id:'input-option'~option.product_option_id,
-                    name:'option[' ~ option.product_option_id ~ ']',
-                    value:option.value ,
-                    placeholder:option.name
-                }) %}
-            </div>
-        {% endif %}
-        {% if option.type == 'textarea' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label"
-                       for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                {% include component.input.template with component.input|merge({
-                    type:'textarea',
-                    id:'input-option'~option.product_option_id,
-                    name:'option[' ~ option.product_option_id ~ ']',
-                    value:option.value ,
-                }) %}
-
-            </div>
-        {% endif %}
-        {% if option.type == 'file' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label">{{ option.name }}</label>
-                {% include component.button.template with {button:{
-                    button: true,
-                    id:'button-upload'~ option.product_option_id ,
-                    style:'default',
-                    classes:'btn-block',
-                    text_button:'<i
-                            class="fa fa-upload"></i> '~ button_upload ,
-                    title:"",
+                        {% endblock %}
+                    {% endembed %}
+                {% endblock %}
+            {% endembed %}
+            {% endif %}
+            {% if option.type == 'text' %}
+                {% include component.form_group.template with {form_group :{
+                    label_text:option.name,
+                    required:option.required,
+                    input:{
+                        type:'text',
+                        id:'input-option'~option.product_option_id,
+                        name:'option[' ~ option.product_option_id ~ ']',
+                        value:option.value ,
+                        placeholder:option.name
+                    }
                 }} %}
-                {#<button type="button" id="button-upload{{ option.product_option_id }}"#}
-                {#data-loading-text="{{ text_loading }}"#}
-                {#class="btn btn-vis btn-default btn-block"><i#}
-                {#class="fa fa-upload"></i> {{ button_upload }}</button>#}
-                {##}
-                <input type="hidden" name="option[{{ option.product_option_id }}]" value=""
-                       id="input-option{{ option.product_option_id }}"/>
-            </div>
-        {% endif %}
-        {% if option.type == 'date' %}
-            {% include component.form_group.template with component.form_group|merge({
-                type:'date',
-                id:'input-option'~option.product_option_id,
-                name:'option[' ~ option.product_option_id ~ ']',
-                value:option.value,
-                text_input:option.name,
-                classes:'',
-            }) %}
-        {% endif %}
-        {% if option.type == 'datetime' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label"
-                       for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                <div class="input-group datetime">
-                    <input type="text" name="option[{{ option.product_option_id }}]"
-                           value="{{ option.value }}" data-date-format="YYYY-MM-DD HH:mm"
-                           id="input-option{{ option.product_option_id }}"
-                           class="form-control"/>
-                    <span class="input-group-btn">
-                <button type="button" class="btn btn-vis btn-default"><i class="fa fa-calendar"></i></button>
-                </span></div>
-            </div>
-        {% endif %}
-        {% if option.type == 'time' %}
-            <div class="form-group{% if option.required %} required {% endif %}">
-                <label class="control-label"
-                       for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                <div class="input-group time">
-                    <input type="text" name="option[{{ option.product_option_id }}]"
-                           value="{{ option.value }}" data-date-format="HH:mm"
-                           id="input-option{{ option.product_option_id }}"
-                           class="form-control"/>
-                    <span class="input-group-btn">
-                <button type="button" class="btn btn-vis btn-default"><i class="fa fa-calendar"></i></button>
-                </span></div>
-            </div>
-        {% endif %}
-    {% endfor %}
-    </div>{% endif %}
+            {% endif %}
+            {% if option.type == 'textarea' %}
+                {% include component.form_group.template with { form_group :{
+                    label_text:option.name,
+                    required:option.required,
+                    input:{
+                        type:'textarea',
+                        id:'input-option'~option.product_option_id,
+                        name:'option[' ~ option.product_option_id ~ ']',
+                        value:option.value ,
+                    }
+                }} %}
+            {% endif %}
+            {% if option.type == 'file' %}
+                {% include component.form_group.template with { form_group :{
+                    label_text:option.name,
+                    required:option.required,
+                    input:{
+                        type:'hidden',
+                        id:'input-option'~option.product_option_id,
+                        name:'option[' ~ option.product_option_id ~ ']',
+                        value:'' ,
+                    },
+                    button:{
+                        button: true,
+                        id:'button-upload'~ option.product_option_id ,
+                        style:'default',
+                        classes:'btn-block',
+                        text_button:'<i
+                    class="fa fa-upload"></i> '~ button_upload ,
+                        title:"",
+                    }
+                }} %}
+
+            {% endif %}
+            {% if option.type == 'date' %}
+                {% include component.form_group.template with {
+                    form_group:{
+                        label_text:option.name,
+                        required:option.required,
+                        input_group:{
+                            classes:'date',
+                            input:{
+                                type:'date',
+                                id:'input-option' ~ option.product_option_id,
+                                name:'option[' ~ option.product_option_id ~ ']',
+                                value: option.value,
+                            },
+                            button:{
+                                style:'default',
+                                icon:'fa fa-calendar',
+                            }
+                        }
+                    }
+                } %}
+            {% endif %}
+            {% if option.type == 'datetime' %}
+                {% include component.form_group.template with {
+                    form_group:{
+                        label_text:option.name,
+                        required:option.required,
+                        input_group:{
+                            classes:'datetime',
+                            input:{
+                                type:'datetime',
+                                id:'input-option' ~ option.product_option_id,
+                                name:'option[' ~ option.product_option_id ~ ']',
+                                value: option.value,
+                            },
+                            button:{
+                                style:'default',
+                                icon:'fa fa-calendar',
+                            }
+                        }
+                    }
+                } %}
+            {% endif %}
+            {% if option.type == 'time' %}
+                {% include component.form_group.template with {
+                    form_group:{
+                        label_text:option.name,
+                        required:option.required,
+                        input_group:{
+                            classes:'time',
+                            input:{
+                                type:'time',
+                                id:'input-option' ~ option.product_option_id,
+                                name:'option[' ~ option.product_option_id ~ ']',
+                                value: option.value,
+                            },
+                            button:{
+                                style:'default',
+                                icon:'fa fa-calendar',
+                            }
+                        }
+                    }
+                } %}
+            {% endif %}
+        {% endfor %}
+    </div>
+{% endif %}
