--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -35,6 +35,7 @@ h1 ,.heading-h1{
 }
 h2 ,.heading-h2{
   font-size: $font-headings-size-base*1.8;
+  margin-bottom: $font-headings-size-base*1.8;
 }
 h3 ,.heading-h3{
   font-size: $font-headings-size-base*1.2;
@@ -141,20 +142,11 @@ div.required .control-label:before {
   font-size: 14px;
   line-height: 14px;
 }
-#top-links {
-  padding-top: 6px;
-}
 #top-links a + a {
   margin-left: 15px;
 }
 /* logo */
-#logo {
-  margin: 0 0 10px 0;
-}
 /* search */
-#search {
-  margin-bottom: 10px;
-}
 #search .input-lg {
   height: 40px;
   line-height: 20px;
@@ -167,9 +159,6 @@ div.required .control-label:before {
   text-shadow: 0 1px 0 #FFF;
 }
 /* cart */
-#cart {
-  margin-bottom: 10px;
-}
 #cart > .btn {
   font-size: $font-size-base*.8;
   line-height: 18px;
@@ -213,6 +202,7 @@ div.required .control-label:before {
 #cart .dropdown-menu li p {
   margin: 20px 0;
 }
+
 /* menu */
 #menu {
   background-color: $color-primary;
@@ -793,3 +783,11 @@ h2.price {
     color: $color-primary;
   }
 }
+
+.vd-menu .navbar{
+  margin-bottom: 0;
+}
+.vz-header{
+  margin-bottom: 20px;
+}
+.common-home{}
