--- a/catalog/view/theme/d_visualize/template/product/special.twig
+++ b/catalog/view/theme/d_visualize/template/product/special.twig
@@ -1,48 +1,10 @@
 {#it's mean in layout template#}
 {% extends template %}
 {% block content %}
-    <h1 class="header-h2">{{ heading_title }}</h1>
-    {% if thumb or description %}
-        <div class="row">
-            {% if thumb %}
-                <div class="col-sm-2"><img src="{{ thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}"
-                                           class="img-thumbnail"/></div>
-            {% endif %}
-            {% if description %}
-                <div class="col-sm-10">{{ description }}</div>
-            {% endif %}
-        </div>
-        <hr>
-    {% endif %} {#-- category info --#}
-
-    {% if categories %}
-        <div class="h4">{{ text_refine }}</div>
-        <div class="row">
-            {% for category in categories %}
-                <div class="col-sm-3"><a href="{{ categorty.href }}">{{ category.name }}</a></div>
-            {% endfor %}
-        </div>
-    {% endif %} {#-- categories --#}
-    {% if products %}
-        <div class="row">
-            {% for product in products %}
-                <div class="product-layout product-list col-xs-4">
-                    {% include component.d_product_thumb.template with component.d_product_thumb|merge(product) %}
-                </div>
-            {% endfor %}
-        </div>
-        <div class="row">
-            <div class="col-sm-6 text-left">{{ pagination }}</div>
-            <div class="col-sm-6 text-right">{{ results }}</div>
-        </div>
-    {% endif %} {#-- products --#}
-
-    {% if not categories %}
-        {% if not products %}
-            <p>{{ text_empty }}</p>
-            <div class="buttons">
-                <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
-            </div>
-        {% endif %}
-    {% endif %}
+    <h1 class="heading-h1">{{ heading_title }}</h1>
+    <div id="product-special" class='vz-product-special'>
+        {% include component.d_product_list.template %}
+    </div>
 {% endblock %}
+
+
