addition to bug - loader bug #4; remove add cart,wishlist vdh logic to vdh;

--- a/catalog/view/theme/d_visualize/template/common/footer.twig
+++ b/catalog/view/theme/d_visualize/template/common/footer.twig
@@ -1,6 +1,7 @@
 {% for script in scripts %}
     <script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
+	{#<script src="catalog/view/javascript/d_visualize/lib/cq-prolyfill.js" async></script>#}
 {# only for devs #}
 {% if admin %}
 	<script>
