--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -261,13 +261,13 @@ div.required .control-label:before {
 }
 #menu #category {
   float: left;
-  padding-left: 15px;
   font-size: 16px;
   font-weight: 700;
   line-height: 40px;
-  color: $color-text-primary;
+  color: $color-primary;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
+
 #menu .btn-navbar {
   font-size: 15px;
   font-stretch: expanded;
