committing what we have

--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -200,7 +200,7 @@ div.required .control-label:before {
   }
 }
 #cart .dropdown-menu li p {
-  margin: 20px 0;
+  margin: 20px 20px;
 }
 
 /* menu */
