--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -202,7 +202,9 @@ div.required .control-label:before {
 #cart .dropdown-menu li p {
   margin: 20px 20px;
 }
-
+#button-cart{
+  margin-bottom: 20px;
+}
 /* menu */
 #menu {
   background-color: $color-primary;
@@ -264,7 +266,7 @@ div.required .control-label:before {
   font-size: 16px;
   font-weight: 700;
   line-height: 40px;
-  color: $color-primary;
+  color: $color-text-primary;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -596,21 +598,21 @@ footer h5 {
     min-height: 0;
   }
 }
-.product-thumb .rating {
+.product-thumb .vz-rating {
   padding-bottom: 10px;
 }
-.rating .fa-stack {
+.vz-rating .fa-stack {
   font-size: 8px;
 }
-.rating .fa-star-o {
+.vz-rating .fa-star-o {
   color: #999;
   font-size: 15px;
 }
-.rating .fa-star {
+.vz-rating .fa-star {
   color: #FC0;
   font-size: 15px;
 }
-.rating .fa-star + .fa-star-o {
+.vz-rating .fa-star + .fa-star-o {
   color: #E69500;
 }
 h2.price {
