--- a/catalog/view/theme/d_visualize/template/partial/d_rating.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_rating.twig
@@ -1,5 +1,3 @@
 {% if component.d_rating.template %}
-    {% include component.d_rating.template with component.d_rating %}
-{% else %}
-    {% include partial.d_rating.component.d_rating.template with partial.d_rating.component.d_rating %}
+    {% include component.d_rating.template %}
 {% endif %}
