market place fix.

--- a/admin/view/javascript/d_visualize/assets/sass/_normalize.scss
+++ b/admin/view/javascript/d_visualize/assets/sass/_normalize.scss
@@ -4,6 +4,9 @@
     display: flex;
   }
 }
+.flex-column{
+  flex-direction: column;
+}
 body {
   &::-webkit-scrollbar, ::-webkit-scrollbar {
     -webkit-appearance: none;
