--- a/admin/view/javascript/d_visualize/assets/style/app.styl
+++ b/admin/view/javascript/d_visualize/assets/style/app.styl
@@ -3,7 +3,7 @@
 $body-font-family := 'Open Sans', sans-serif
 
 $headings := {
-  h1: { size: 30px, weight: 300, line-height: 1, letter-spacing: -.04em, font-family: $heading-font-family },
+  h1: { size: 30px, weight: 300, line-height: 1, letter-spacing: normal, font-family: $heading-font-family },
   h2: { size: 28px, weight: 400, line-height: 1, letter-spacing: -.02em, font-family: $heading-font-family },
   h3: { size: 22px, weight: 400, line-height: 1, letter-spacing: normal, font-family: $heading-font-family },
   h4: { size: 18px, weight: 400, line-height: 1, letter-spacing: normal, font-family: $heading-font-family },
