--- a/admin/view/template/extension/module/d_visualize_nuxt.twig
+++ b/admin/view/template/extension/module/d_visualize_nuxt.twig
@@ -1,12 +1,17 @@
 {{ header }}
-    {{ column_left }}
-<div id="content">
-    {{ app|raw }}
-</div>
 <style>
-    #__nuxt .row{
+    #__nuxt .row {
         margin-left: 0;
         margin-right: 0;
+    }
+
+    #container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #content {
+        flex: 1 1 100%;
     }
 </style>
 {% if constant('VERSION')>'3.0.0.0' %}
@@ -15,6 +20,7 @@
             margin-left: -235px;
             margin-top: -60px;
         }
+
         @media screen and (max-width: 768px) {
             .v-menu__content {
                 margin-left: 0;
@@ -24,4 +30,8 @@
     </style>
 {% endif %}
 
+{{ column_left }}
+<div id="content">
+    {{ app|raw }}
+</div>
 {{ footer }}
