--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/opencart.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/opencart.twig
@@ -7,7 +7,7 @@
             <p class="heading-h4"><a href="{{ product.href }}">{{ product.name }}</a></p>
             <p>{{ product.description }}</p>
             {% if product.rating %}
-                {% include component.d_rating.template with  component.d_rating|merge({rating:rating,static_rating:true}) %}
+                {% include component.d_rating.template with  component.d_rating|merge({rating:product.rating,static_rating:true}) %}
 
             {% endif %}
             {% if product.price %}
