opencart theme justify for vdh

--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
@@ -1,5 +1,7 @@
 $color-text-primary: white;
 $color-primary: #229ac8;
+$color-header-top-text: #888;
+$color-header-top: #eeeeee;
 $color-text-body: #666;
 $color-heading: #444;
 $color-link: #23a1d1;
