--- a/catalog/view/theme/d_visualize/template/extension/module/d_visual_designer_footer.twig
+++ b/catalog/view/theme/d_visualize/template/extension/module/d_visual_designer_footer.twig
@@ -1,3 +1,5 @@
-<div class="vz-footer">
-    {{description}}
-</div>
+<footer>
+    <div class="vz-footer">
+        {{description}}
+    </div>
+</footer>
