--- a/catalog/view/theme/d_visualize/template/extension/module/d_visual_designer_header.twig
+++ b/catalog/view/theme/d_visualize/template/extension/module/d_visual_designer_header.twig
@@ -1,3 +1,5 @@
-<div class="vz-header">
-    {{description}}
-</div>
+<header>
+    <div class="vz-header">
+        {{description}}
+    </div>
+</header>
