--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
@@ -2,6 +2,8 @@ $color-text-primary: white;
 $color-primary: #229ac8;
 $color-header-top-text: #888;
 $color-header-top: #eeeeee;
+$color-footer: #303030;
+$color-footer-text: #e2e2e2;
 $color-text-body: #666;
 $color-heading: #444;
 $color-link: #23a1d1;
