add admin fix for panel; remove bugging typograhy ; add trunc function for empty compiled css;

--- a/catalog/view/theme/d_visualize/template/common/header.twig
+++ b/catalog/view/theme/d_visualize/template/common/header.twig
@@ -61,6 +61,8 @@
     {% for script in scripts %}
         <script src="{{ script }}" type="text/javascript"></script>
     {% endfor %}
-
+    <style>
+        /*@import url('https://fonts.googleapis.com/css?family=Alex+Brush');*/
+    </style>
 </head>
 <body class="{{ class }}">
