--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/default.twig
@@ -20,7 +20,9 @@
                 {% if product.rating %}
                     <div class="vz-product-thumb__rating">
                         {% include component.d_rating.template with component.d_rating|merge({
-                            rating:product.rating
+                            rating:product.rating,
+                            static_rating:true,
+
                         }) %}
                     </div>
                 {% endif %}
