--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -94,21 +94,31 @@ div.required .control-label:before {
 }
 
 /* Gradent to all drop down menus */
-.dropdown-menu li, {
-  a:hover, button:hover {
-    text-decoration: none;
-    color: $color-text-primary;
-    background-color: $color-primary;
-    background-image: linear-gradient(to bottom, darken($color-primary, 3%), darken($color-primary, 8%));
-    background-repeat: repeat-x;
-  }
+.dropdown-menu {
+  li {
+    a:not(.vd-mini-cart.dropdown-menu li a):hover, button:not(.vd-mini-cart.dropdown-menu li button):hover {
+      text-decoration: none;
+      color: $color-text-primary;
+      background-color: $color-primary;
+      background-image: linear-gradient(to bottom, darken($color-primary, 3%), darken($color-primary, 8%));
+      background-repeat: repeat-x;
+    }
 
-  button {
-    padding-top: 0;
-    padding-bottom: 0;
-    line-height: 25px;
+    button {
+      padding-top: 0;
+      padding-bottom: 0;
+      line-height: 25px;
+    }
   }
 }
+.dropdown-menu li a:hover{
+  text-decoration: none;
+  color: $color-text-primary;
+  background-color: $color-primary;
+  background-image: linear-gradient(to bottom, darken($color-primary, 3%), darken($color-primary, 8%));
+  background-repeat: repeat-x;
+}
+
 
 .vd-menu--style-v2 .vd-navigation__nav__item__inner:hover {
   text-decoration: none;
